--- a/Push/package.json
+++ b/Push/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
-    "nedb": "^1.7.4"
+    "http_ece": "^0.2.0",
+    "nedb": "^1.7.4",
+    "urlsafe-base64": "^1.0.0"
   }
 }
